2003-05-22  Bastien Nocera  <hadess@hadess.net>

	* README: removed TODO item
	* src/gtk-playlist.c: (gtk_playlist_add_nsv),
	(gtk_playlist_add_mrl): move the nsv work-around to another function
	* src/totem.c: (totem_action_error),
	(totem_action_fullscreen_toggle), (totem_action_set_mrl): set the logo
	mode before launching it or we'll get auto-resized on logo load,
	remove the buffering dialog if we get an error
	* src/vanity.c: (drag_video_cb), (video_widget_create): don't hide
	the main window if we get an error on startup

2003-05-22  Bastien Nocera  <hadess@hadess.net>

	* README: added TODO item
	* src/gtk-playlist.c: (gtk_playlist_add_mrl): added work-around for
	the nullsoft user-agent verifier

2003-05-21  Julien MOUTTE  <julien@moutte.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_set_visuals),
	(bacon_video_widget_set_visuals_quality),
	(bacon_video_widget_get_auto_resize),
	(bacon_video_widget_set_scale_ratio): Implemented visuals quality and
	scale ratio handling
	* src/bacon-video-widget-xine.c:
	(bacon_video_widget_get_auto_resize):
	* src/bacon-video-widget.h: New method for getting auto resize mode
	* src/gstvideowidget.c: (gst_video_widget_size_request),
	(gst_video_widget_allocate), (gst_video_widget_get_scale_override),
	(gst_video_widget_set_scale_override),
	(gst_video_widget_set_scale): Adding a new method for scale override
	* src/gstvideowidget.h: Adding a new method for scale override

2003-05-21  Bastien Nocera  <hadess@hadess.net>

	* data/totem.applications:
	* data/totem.keys:
	* src/gtk-playlist.c: (gtk_playlist_add_mrl): added support for the
	SWF flash files, and FLAC

2003-05-20  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (bacon_video_widget_size_request),
	(bacon_video_widget_set_scale_ratio): set the size request of the
	widget if we're trying to scale to a size that's smaller than the
	current widget size (allows 'zoom 1:2' to shrink to sizes smaller than
	the default size)
